# libNN

./: .gitignore  README.md  __init__.py  activation.py  base.py  layers.py  losses.py  network.py  operations.py  optimizers.py  pyproject.toml  utils.py
example/: clcassNN.py  rgressNN.py
